--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,5 +63,10 @@ dependencies {
     implementation 'com.github.iammert:MultiSearchView:0.1'
     implementation 'com.github.trieulh-ict:SimpleGenericAdapter:0.3.0'
 
+    implementation 'org.greenrobot:eventbus:3.1.1'
+
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+
 
 }
